Fix button overflow

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -53,6 +53,7 @@ main {
 .TopRated {
   margin: 20px auto;
   max-width: 1200px;
+  margin: 100px auto;
 }
 .TopRated > div {
   display: flex;
@@ -61,14 +62,15 @@ main {
 }
 .first-course {
   flex: 1;
-  margin: 0 10px;
+  margin: 0 12px;
 }
 .second-course {
   flex: 1;
+  margin: 0 12px;
 }
 .third-course {
   flex: 1;
-  margin: 0 10px;
+  margin: 0 12px;
 }
 /* choose language */
 .choose-language {
@@ -181,6 +183,12 @@ main {
   font-size: var(--fs-xl);
 }
 
+@media screen and (max-width: 715px) {
+  #buy-now {
+    padding: 10px 20px;
+  }
+
+}
 /* Review Say */
 .review {
   display: flex;
